<resources>
  <!--General Strings-->

  <string name="app_name">Archaeological Fieldwork</string>
  <string name="title_activity_maps">Map</string>

  <!--Button Strings-->

  <string name="button_addHillFort">Add HillFort</string>
  <string name="save_hillfort">Save Hillfort</string>
  <string name="button_addImage"> Add Image</string>
  <string name="select_hillfort_image">Select Hillfort Image</string>
  <string name="button_deleteHillfort">Remove Hillfort</string>
  <string name="button_location">Set Location</string>
  <string name="button_signUp">Sign Up</string>
  <string name="button_logIn">Log In</string>
  <string name="button_addProfileImage">Add Avatar</string>
  <string name="button_updateProfileImage">Update Avatar</string>
  <string name="button_updatePassword">Update Password</string>
  <string name="button_camera">Camera</string>
  <string name="button_share">Share</string>

  <!--Hint Strings-->
  <string name="hint_HillFortTitle">Hillfort Title</string>
  <string name="hint_HillFortDescription">Description</string>
  <string name="hint_userName">Name</string>
  <string name="hint_userEmail">Email</string>
  <string name="hint_userPassword">Password</string>
  <string name="hint_verifyPassword">Verify Password</string>
  <string name="profile_description">Description</string>
  <string name="hillfort_profile_name">Name</string>
  <string name="hillfort_visited">Visited</string>
  <string name="hint_longitude">Longitude</string>
  <string name="hint_latitude">Latitude</string>

  <!--Menu Strings-->
  <string name="menu_addHillfort">Add Hillfort</string>
  <string name="menu_cancelHillfort">Cancel</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_settings">Profile Settings</string>
  <string name="menu_editHillfort">Edit</string>
  <string name="menu_optionsHeading">Archaeological Fieldwork Menu</string>
  <string name="menu_hillforts">Hillforts</string>
  <string name="menu_location">Location</string>
  <string name="nav_drawer_open">Open</string>
  <string name="nav_drawer_close">Close</string>
  <string name="menu_signup">Sign Up</string>
  <string name="menu_profiles">HillFort Profiles</string>
  <string name="menu_favorites">HillFort Favorites</string>

  <!-- Profile Strings-->
  <string name="profile_title">Profile</string>
  <string name="profile_name">Name</string>
  <string name="profile_email">Email</string>
  <string name="button_updateUser">Update User</string>
  <string name="button_deleteUser">Delete User</string>
  <string name="menu_logout">Logout</string>
  <string name="profile_text_member">Member Since :</string>
  <string name="profile_member_date">0</string>
  <string name="profile_text_visit">Number of Hillforts Seen :</string>
  <string name="profile_no_visit">0</string>

  <!-- Message Strings -->
  <string name="message_login">Login with your email and password </string>
  <string name="message_signup">Fill out the form below to join the Archaeological Fieldwork Community</string>
  <string name="message_join">Join Archaeological Fieldwork</string>
  <string name="message_home">Welcome to Archaeological Fieldwork</string>
  <string name="message_home_about">Explore and Discover Archaeological Sites all over the World</string>

  <!-- Header Strings -->
  <string name="header_settings">Edit Profile</string>
  <string name="header_profile">Profile</string>
  <string name="title_activity_hillfort_map">HillfortMap</string>
  <string name="hillfort_profiles">Hill Fort Profiles</string>

</resources>
