<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_profile"
      android:icon="@drawable/baseline_person_white_18dp"
      android:title="@string/menu_profile" />
    <item
      android:id="@+id/nav_hillfort"
      android:icon="@drawable/baseline_notes_white_18dp"
      android:title="@string/menu_hillforts" />
    <item
      android:id="@+id/nav_add_hillfort"
      android:icon="@drawable/baseline_add_circle_outline_white_18dp"
      android:title="@string/menu_addHillfort" />
    <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/baseline_settings_white_18dp"
      android:title="@string/menu_settings"/>
    <item
      android:id="@+id/nav_logout"
      android:icon="@drawable/baseline_close_white_18dp"
      android:title="@string/menu_logout"/>
  </group>
</menu>