<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">


  <group android:background="@color/colorAccent">
    <item
      android:id="@+id/menu_profile_settings"
      android:icon="@drawable/baseline_edit_white_18dp"
      android:title="@string/menu_settings" />
    <item
      android:id="@+id/menu_profiles"
      android:icon="@drawable/baseline_notes_white_18dp"
      android:title="@string/menu_profiles" />
    <item
      android:id="@+id/menu_hillfort_favorites"
      android:icon="@drawable/baseline_favorite_white_18dp"
      android:title="@string/menu_favorites"/>
    <item
      android:id="@+id/menu_logout"
      android:icon="@drawable/baseline_close_white_18dp"
      android:title="@string/menu_logout" />
  </group>
</menu>