<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="16dp"
  android:gravity="center"
  >

    <TextView
      android:id="@+id/signup_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/message_signup"
      android:textSize="18sp"
      android:gravity="center"/>

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_userName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/hint_userName"
      android:inputType="text"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"/>

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_userEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/hint_userEmail"
      android:inputType="text"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"/>

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_userPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/hint_userPassword"
      android:inputType="textPassword"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"/>

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_verifyPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:hint="@string/hint_verifyPassword"
      android:inputType="textPassword"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="14sp"/>

    <Button
      android:id="@+id/fragment_saveUser"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:background="@color/colorAccent"
      android:paddingBottom="8dp"
      android:paddingTop="8dp"
      android:text="@string/button_signUp"
      android:textColor="@color/colorPrimary"
      android:textSize="16sp"/>

</LinearLayout>