<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".views.startup.StartUpView">


  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="125dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_userEmailLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_userEmail" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/textInputLayout2"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fragment_userPasswordLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/hint_userPassword" />
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/fragment_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="44dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="44dp"
    android:text="@string/button_logIn"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

  <TextView
    android:id="@+id/loginMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:text="@string/message_login"
    android:textSize="18dp"
    app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>